--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,27 @@
 name: Test
 
 on:
-  - push
-  - pull_request
+  [push, pull_request]
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
+  mypytest:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        on: [ubuntu-latest]
         python-version: ['3.8', '3.x']
 
+    name: mypy type checks
     steps:
-    - uses: actions/checkout@2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install mypy
-    - name: Test mypy
-      shell: bash
-      run: | 
-        mypy .
+      - uses: actions/checkout@2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mypy
+      - name: Test mypy
+        shell: bash
+        run: | 
+          mypy .
