--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install mypy
     - name: mypy Type Check
-      run: mypy .
+      run: mypy donutshell/
